--- a/.github/workflows/build.main.yml
+++ b/.github/workflows/build.main.yml
@@ -6,8 +6,8 @@ on:
       - main
     paths:
       # '*' matches any character except '/'
-      - 'images/*'
-      - '.github/workflows/*'
+      - "images/*"
+      - ".github/workflows/*"
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,19 +15,21 @@ jobs:
       - uses: actions/checkout@v2
       - name: Docker login
         env:
-          DOCKER_HUB_USERNAME: ${{ secrets. DOCKER_HUB_USERNAME }} 
+          DOCKER_HUB_USERNAME: ${{ secrets. DOCKER_HUB_USERNAME }}
           DOCKER_HUB_PASSWORD: ${{ secrets. DOCKER_HUB_PASSWORD }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          
+
         run: |
           echo $DOCKER_HUB_PASSWORD | docker login --username $DOCKER_HUB_USERNAME --password-stdin
           echo $GITHUB_TOKEN | docker login docker.pkg.github.com --username $GITHUB_ACTOR --password-stdin
-          
+
       - name: Build & Push Image -- ringcentral/jacoco-tool
         run: |
           cd images
           IMAGE_NAME=ringcentral/jacoco-tool
-          VERSION="$(awk -F ':' '/FROM ringcentral\/jdk:/ {print $2}' Dockerfile)"
+          JDK_VERSION="$(awk -F ':' '/FROM ringcentral\/jdk:/ {print $2}' Dockerfile)"
+          SWAGGER_VERSION="$(awk -F '=' '/ENV SWAGGER_COVERAGE_VERSION=/ {print $2}' Dockerfile)"
+          VERSION="${JDK_VERSION}-swagger-${SWAGGER_VERSION}"
           docker build -t ${IMAGE_NAME} -f Dockerfile .
           docker tag "${IMAGE_NAME}" "${IMAGE_NAME}:latest"
           docker tag "${IMAGE_NAME}" "${IMAGE_NAME}:${VERSION}"
