--- a/images/Dockerfile
+++ b/images/Dockerfile
@@ -18,11 +18,11 @@ RUN apt-get update && apt-get install -y \
     && rm -rf /var/lib/apt/lists/*
 
 # Install swagger-coverage-commandline
-
-RUN wget https://github.com/xingyu-he/swagger-coverage/releases/download/v1.0.0/swagger-coverage-commandline-1.0-SNAPSHOT.zip \
-    && unzip swagger-coverage-commandline-1.0-SNAPSHOT.zip \
-    && mv swagger-coverage-commandline-1.0-SNAPSHOT /opt/swagger-coverage \
-    && rm swagger-coverage-commandline-1.0-SNAPSHOT.zip \
+ENV SWAGGER_COVERAGE_VERSION=1.1.0
+RUN wget https://github.com/xingyu-he/swagger-coverage/releases/download/v1.1.0/swagger-coverage-commandline-1.1.0.zip \
+    && unzip swagger-coverage-commandline-1.1.0.zip \
+    && mv swagger-coverage-commandline-1.1.0 /opt/swagger-coverage \
+    && rm swagger-coverage-commandline-1.1.0.zip \
     && ln -s /opt/swagger-coverage/bin/swagger-coverage-commandline /usr/local/bin/swagger-coverage
 
 # Copy jacococli.jar to the image
